Clearer READMEs and structure

--- a/safeSCAD/EvoChecker/safeSCAD-NoVconfig.properties
+++ b/safeSCAD/EvoChecker/safeSCAD-NoVconfig.properties
@@ -1,5 +1,5 @@
 PROBLEM = safeSCAD-with-non-verified-DNN
-	MODEL_TEMPLATE_FILE = models/safeSCAD-with-non-verified-DNN.sm
+	MODEL_TEMPLATE_FILE = models/safeSCAD_no_verif.pm
 	PROPERTIES_FILE = models/safescad.pctl
 
 ALGORITHM = NSGAII
