--- a/safeSCAD/EvoChecker/safeSCAD-V1config.properties
+++ b/safeSCAD/EvoChecker/safeSCAD-V1config.properties
@@ -1,5 +1,5 @@
 PROBLEM = safeSCAD-v1-verified-DNN
-	MODEL_TEMPLATE_FILE = models/safeSCAD-v1-verified-DNN.sm
+	MODEL_TEMPLATE_FILE = models/safeSCAD_v1.pm
 	PROPERTIES_FILE = models/safescad.pctl
 
 ALGORITHM = NSGAII
