--- a/safeSCAD/EvoChecker/safeSCAD-V2config.properties
+++ b/safeSCAD/EvoChecker/safeSCAD-V2config.properties
@@ -1,5 +1,5 @@
 PROBLEM = safeSCAD-v2-verified-DNN
-	MODEL_TEMPLATE_FILE = models/safeSCAD-v2-verified-DNN.sm
+	MODEL_TEMPLATE_FILE = models/safeSCAD_v2.pm
 	PROPERTIES_FILE = models/safescad.pctl
 
 ALGORITHM = NSGAII
