--- a/safeSCAD/EvoChecker/safeSCADNoDNNconfig.properties
+++ b/safeSCAD/EvoChecker/safeSCADNoDNNconfig.properties
@@ -1,5 +1,5 @@
 PROBLEM = SafeSCAD-no-DNN
-	MODEL_TEMPLATE_FILE = models/SafeSCAD-no-DNN.pm
+	MODEL_TEMPLATE_FILE = models/SafeSCAD_perfect_perception.pm
 	PROPERTIES_FILE = models/safescad.pctl
 
 ALGORITHM = NSGAII
